[gd_scene load_steps=8 format=3 uid="uid://brtjpxthaddjq"]

[ext_resource type="Script" path="res://Nodes/DepositAreaNode/deposit_area.gd" id="1_mdksv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dgxvr"]
shading_mode = 2

[sub_resource type="BoxMesh" id="BoxMesh_3nyof"]
material = SubResource("StandardMaterial3D_dgxvr")
size = Vector3(7.5, 0.2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_i1nvm"]
size = Vector3(7.5, 0.2, 10)

[sub_resource type="BoxMesh" id="BoxMesh_kw82q"]
material = SubResource("StandardMaterial3D_dgxvr")
size = Vector3(2, 0.2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_rmcrj"]
size = Vector3(2.2, 0.2, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_wqjjj"]
size = Vector3(7.5, 2, 1)

[node name="DepositArea" type="Node3D"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)
script = ExtResource("1_mdksv")

[node name="BottomMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_3nyof")

[node name="BottomStatic" type="StaticBody3D" parent="BottomMesh"]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="BottomMesh/BottomStatic"]
shape = SubResource("BoxShape3D_i1nvm")

[node name="LeftMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -3.66666, 0, 0)
mesh = SubResource("BoxMesh_kw82q")

[node name="LeftStatic" type="StaticBody3D" parent="LeftMesh"]
transform = Transform3D(-1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0)
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftMesh/LeftStatic"]
shape = SubResource("BoxShape3D_rmcrj")

[node name="RigthMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 3.66666, 0, 0)
mesh = SubResource("BoxMesh_kw82q")

[node name="RigthStatic" type="StaticBody3D" parent="RigthMesh"]
transform = Transform3D(-1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0)
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigthMesh/RigthStatic"]
shape = SubResource("BoxShape3D_rmcrj")

[node name="StoreArea" type="Area3D" parent="." groups=["StoreArea"]]
collision_layer = 0
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="StoreArea"]
shape = SubResource("BoxShape3D_wqjjj")

[connection signal="body_entered" from="StoreArea" to="." method="_on_store_area_body_entered"]
[connection signal="body_exited" from="StoreArea" to="." method="_on_store_area_body_exited"]
